--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "fast create front-end apps kits,based webpack ,react,vue",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node bin/femix add react"
   },
-  "bin":{
-    "femix":"bin/femix"
+  "bin": {
+    "femix": "bin/femix"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "chalk": "^2.3.0",
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
-    "commander": "^2.14.1"
+    "commander": "^2.14.1",
+    "execa": "^0.9.0"
   }
 }
